[ui-fix] ui-autocomplete z-index fix (#2191)

--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -284,10 +284,6 @@ textarea.form-control {
 	}
 }
 
-.link-field.ui-front {
-	z-index: inherit;
-}
-
 .modal .hasDatepicker {
 	z-index: 1140;
 }
